@@ -6,7 +6,6 @@
  */
 package com.powsybl.sld.builders;
 
-import com.google.common.collect.ImmutableMap;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.util.ServiceLoaderCache;
 import com.powsybl.iidm.network.*;
@@ -188,12 +187,12 @@ public class NetworkGraphBuilder implements GraphBuilder {
             Objects.requireNonNull(line);
 
             String id = line.getId() + "_" + side.name();
-            String name = line.getName();
+            String name = line.getNameOrId();
             String equipmentId = line.getId();
             FeederWithSideNode.Side s = FeederWithSideNode.Side.valueOf(side.name());
             Branch.Side otherSide = side == Branch.Side.ONE ? Branch.Side.TWO : Branch.Side.ONE;
             VoltageLevel vlOtherSide = line.getTerminal(otherSide).getVoltageLevel();
-            return FeederLineNode.create(graph, id, name, equipmentId, s, new VoltageLevelInfos(vlOtherSide.getId(), vlOtherSide.getName(), vlOtherSide.getNominalV()));
+            return FeederLineNode.create(graph, id, name, equipmentId, s, new VoltageLevelInfos(vlOtherSide.getId(), vlOtherSide.getNameOrId(), vlOtherSide.getNominalV()));
         }
 
         private FeederNode createFeederNode(VoltageLevelGraph graph, Injection<?> injection) {
@@ -201,19 +200,19 @@ public class NetworkGraphBuilder implements GraphBuilder {
             Objects.requireNonNull(injection);
             switch (injection.getType()) {
                 case GENERATOR:
-                    return FeederInjectionNode.createGenerator(graph, injection.getId(), injection.getName());
+                    return FeederInjectionNode.createGenerator(graph, injection.getId(), injection.getNameOrId());
                 case LOAD:
-                    return FeederInjectionNode.createLoad(graph, injection.getId(), injection.getName());
+                    return FeederInjectionNode.createLoad(graph, injection.getId(), injection.getNameOrId());
                 case HVDC_CONVERTER_STATION:
-                    return FeederInjectionNode.createVscConverterStation(graph, injection.getId(), injection.getName());
+                    return FeederInjectionNode.createVscConverterStation(graph, injection.getId(), injection.getNameOrId());
                 case STATIC_VAR_COMPENSATOR:
-                    return FeederInjectionNode.createStaticVarCompensator(graph, injection.getId(), injection.getName());
+                    return FeederInjectionNode.createStaticVarCompensator(graph, injection.getId(), injection.getNameOrId());
                 case SHUNT_COMPENSATOR:
                     // FIXME(mathbagu): Non linear shunt can be capacitor or inductor depending on the number of section enabled
-                    return ((ShuntCompensator) injection).getB() >= 0 ? FeederInjectionNode.createCapacitor(graph, injection.getId(), injection.getName())
-                            : FeederInjectionNode.createInductor(graph, injection.getId(), injection.getName());
+                    return ((ShuntCompensator) injection).getB() >= 0 ? FeederInjectionNode.createCapacitor(graph, injection.getId(), injection.getNameOrId())
+                            : FeederInjectionNode.createInductor(graph, injection.getId(), injection.getNameOrId());
                 case DANGLING_LINE:
-                    return FeederInjectionNode.createDanglingLine(graph, injection.getId(), injection.getName());
+                    return FeederInjectionNode.createDanglingLine(graph, injection.getId(), injection.getNameOrId());
                 default:
                     throw new IllegalStateException();
             }
@@ -226,11 +225,11 @@ public class NetworkGraphBuilder implements GraphBuilder {
             Objects.requireNonNull(branch);
 
             String id = branch.getId() + "_" + side.name();
-            String name = branch.getName();
+            String name = branch.getNameOrId();
             String equipmentId = branch.getId();
             Branch.Side otherSide = side == Branch.Side.ONE ? Branch.Side.TWO : Branch.Side.ONE;
             VoltageLevel vlOtherSide = branch.getTerminal(otherSide).getVoltageLevel();
-            VoltageLevelInfos otherSideVoltageLevelInfos = new VoltageLevelInfos(vlOtherSide.getId(), vlOtherSide.getName(), vlOtherSide.getNominalV());
+            VoltageLevelInfos otherSideVoltageLevelInfos = new VoltageLevelInfos(vlOtherSide.getId(), vlOtherSide.getNameOrId(), vlOtherSide.getNominalV());
 
             if (graph.isForVoltageLevelDiagram() && isNotInternalToVoltageLevel(branch)) {
                 if (!branch.hasPhaseTapChanger()) {
@@ -257,7 +256,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
                 //   - a feeder for second other leg
 
                 Map<FeederWithSideNode.Side, VoltageLevelInfos> voltageLevelInfosBySide
-                        = ImmutableMap.of(FeederWithSideNode.Side.ONE, createVoltageLevelInfos(transformer.getLeg1().getTerminal()),
+                        = Map.of(FeederWithSideNode.Side.ONE, createVoltageLevelInfos(transformer.getLeg1().getTerminal()),
                         FeederWithSideNode.Side.TWO, createVoltageLevelInfos(transformer.getLeg2().getTerminal()),
                         FeederWithSideNode.Side.THREE, createVoltageLevelInfos(transformer.getLeg3().getTerminal()));
 
@@ -288,12 +287,12 @@ public class NetworkGraphBuilder implements GraphBuilder {
 
                 // create first other leg feeder node
                 String firstOtherLegNodeId = transformer.getId() + "_" + firstOtherLegSide.name();
-                Feeder3WTLegNode firstOtherLegNode = Feeder3WTLegNode.createForVoltageLevelDiagram(graph, firstOtherLegNodeId, transformer.getName(),
+                Feeder3WTLegNode firstOtherLegNode = Feeder3WTLegNode.createForVoltageLevelDiagram(graph, firstOtherLegNodeId, transformer.getNameOrId(),
                         transformer.getId(), firstOtherLegSide, voltageLevelInfosBySide.get(firstOtherLegSide));
 
                 // create second other leg feeder node
                 String secondOtherLegNodeId = transformer.getId() + "_" + secondOtherLegSide.name();
-                Feeder3WTLegNode secondOtherLegNode = Feeder3WTLegNode.createForVoltageLevelDiagram(graph, secondOtherLegNodeId, transformer.getName(),
+                Feeder3WTLegNode secondOtherLegNode = Feeder3WTLegNode.createForVoltageLevelDiagram(graph, secondOtherLegNodeId, transformer.getNameOrId(),
                         transformer.getId(), secondOtherLegSide, voltageLevelInfosBySide.get(secondOtherLegSide));
 
                 add3wtFeeder(middleNode, firstOtherLegNode, secondOtherLegNode, transformer.getTerminal(side));
@@ -301,7 +300,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
                 // in substation diagram, we only represent the leg node
 
                 String id = transformer.getId() + "_" + side.name();
-                Feeder3WTLegNode legNode = Feeder3WTLegNode.createForSubstationDiagram(graph, id, transformer.getName(), transformer.getId(),
+                Feeder3WTLegNode legNode = Feeder3WTLegNode.createForSubstationDiagram(graph, id, transformer.getNameOrId(), transformer.getId(),
                         FeederWithSideNode.Side.valueOf(side.name()));
 
                 addFeeder(legNode, transformer.getTerminal(side));
@@ -351,7 +350,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
 
         private static VoltageLevelInfos createVoltageLevelInfos(Terminal terminal) {
             VoltageLevel vl = terminal.getVoltageLevel();
-            return new VoltageLevelInfos(vl.getId(), vl.getName(), vl.getNominalV());
+            return new VoltageLevelInfos(vl.getId(), vl.getNameOrId(), vl.getNominalV());
         }
 
         @Override
@@ -361,7 +360,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
         }
     }
 
-    private class NodeBreakerGraphBuilder extends AbstractGraphBuilder {
+    private static class NodeBreakerGraphBuilder extends AbstractGraphBuilder {
 
         private final Map<Integer, Node> nodesByNumber;
 
@@ -371,15 +370,15 @@ public class NetworkGraphBuilder implements GraphBuilder {
         }
 
         public ConnectablePosition.Feeder getFeeder(Terminal terminal) {
-            Connectable connectable = terminal.getConnectable();
-            ConnectablePosition position = (ConnectablePosition) connectable.getExtension(ConnectablePosition.class);
+            Connectable<?> connectable = terminal.getConnectable();
+            ConnectablePosition<?> position = (ConnectablePosition<?>) connectable.getExtension(ConnectablePosition.class);
             if (position == null) {
                 return null;
             }
             if (connectable instanceof Injection) {
                 return position.getFeeder();
             } else if (connectable instanceof Branch) {
-                Branch branch = (Branch) connectable;
+                Branch<?> branch = (Branch<?>) connectable;
                 if (branch.getTerminal1() == terminal) {
                     return position.getFeeder1();
                 } else if (branch.getTerminal2() == terminal) {
@@ -441,7 +440,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
         @Override
         public void visitBusbarSection(BusbarSection busbarSection) {
             BusbarSectionPosition extension = busbarSection.getExtension(BusbarSectionPosition.class);
-            BusNode node = BusNode.create(graph, busbarSection.getId(), busbarSection.getName());
+            BusNode node = BusNode.create(graph, busbarSection.getId(), busbarSection.getNameOrId());
             if (extension != null) {
                 node.setBusBarIndexSectionIndex(extension.getBusbarIndex(), extension.getSectionIndex());
             }
@@ -450,7 +449,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
         }
     }
 
-    private class BusBreakerGraphBuilder extends AbstractGraphBuilder {
+    private static class BusBreakerGraphBuilder extends AbstractGraphBuilder {
 
         private final Map<String, Node> nodesByBusId;
 
@@ -500,7 +499,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
 
         int v = 1;
         for (Bus b : vl.getBusBreakerView().getBuses()) {
-            BusNode busNode = BusNode.create(graph, b.getId(), b.getName());
+            BusNode busNode = BusNode.create(graph, b.getId(), b.getNameOrId());
             nodesByBusId.put(b.getId(), busNode);
             busNode.setBusBarIndexSectionIndex(v++, 1);
             graph.addNode(busNode);
@@ -555,17 +554,15 @@ public class NetworkGraphBuilder implements GraphBuilder {
     }
 
     private void ensureNodeExists(VoltageLevelGraph graph, int n, Map<Integer, Node> nodesByNumber) {
-        if (!nodesByNumber.containsKey(n)) {
-            InternalNode node = new InternalNode(n, graph);
-            nodesByNumber.put(n, node);
+        nodesByNumber.computeIfAbsent(n, k -> {
+            InternalNode node = new InternalNode(k, graph);
             graph.addNode(node);
-        }
+            return node;
+        });
     }
 
     /**
      * Check if the graph is connected or not
-     *
-     * @return true if connected, false otherwise
      */
     private void handleConnectedComponents(VoltageLevelGraph graph) {
         List<Set<Node>> connectedSets = new ConnectivityInspector<>(graph.toJgrapht()).connectedSets();
@@ -705,7 +702,7 @@ public class NetworkGraphBuilder implements GraphBuilder {
                 throw new AssertionError();
         }
         SwitchNode.SwitchKind sk = SwitchNode.SwitchKind.valueOf(aSwitch.getKind().name());
-        return new SwitchNode(aSwitch.getId(), aSwitch.getName(), componentType, false, graph, sk, aSwitch.isOpen());
+        return new SwitchNode(aSwitch.getId(), aSwitch.getNameOrId(), componentType, false, graph, sk, aSwitch.isOpen());
     }
 
     @Override
